--- a/webBot.html
+++ b/webBot.html
@@ -649,22 +649,18 @@
         .physics-lecture-container {
             max-width: 800px;
             margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
+            padding: 0; /* 移除內邊距 */
+            background-color: #fff; /* 設置背景為白色 */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
 
-        .physics-lecture-container h1 {
-            font-size: 1.8rem;
-            margin-bottom: 20px;
-            text-align: center;
-            color: #8ab0ab;
-        }
-
         .physics-lecture-container iframe {
+            width: 100%;
+            height: 100vh; /* 使用視窗高度，根據需要調整 */
             border: none;
             border-radius: 8px;
+            background-color: #fff; /* 確保 iframe 背景為白色 */
         }
 
         /* AI素養題產生器和教我解題區域在手機上的底部間距調整 */
@@ -708,14 +704,6 @@
             </div>
             <!-- 聊天窗口 -->
             <div class="chat-window" id="chat-window"></div>
-
-            <!-- 物理講義 -->
-            <div class="external-content" id="physics-lecture-content" style="display: none;">
-                <div class="physics-lecture-container">
-                    <h1>物理講義</h1>
-                    <iframe src="https://guidephy.github.io/guidephy/PhysicsForGSAT/tableOfContents.html" width="100%" height="600px" frameborder="0"></iframe>
-                </div>
-            </div>
             <!-- AI素養題產生器 -->
             <div class="external-content" id="ai-generator-content" style="display: none;">
                 <div class="ai-generator-container">
@@ -792,7 +780,12 @@
                     <div id="resultArea" class="result-area"></div>
                 </div>
             </div>
-            
+            <!-- 物理講義 -->
+            <div class="external-content" id="physics-lecture-content" style="display: none;">
+                <div class="physics-lecture-container">
+                    <iframe src="https://guidephy.github.io/guidephy/PhysicsForGSAT/tableOfContents.html" width="100%" height="600px" frameborder="0"></iframe>
+                </div>
+            </div>
             <!-- 輸入區域 -->
             <div class="input-area">
                 <label class="upload-button" style="display: none;">
@@ -1189,282 +1182,6 @@
                     option.text = `${i}題`;
                     questionCountSelect.appendChild(option);
                 }
-            }
-        })();
-
-        // ----------- 教我解題的 JavaScript -----------
-        (function() {
-            // 切換標籤
-            document.getElementById('imageTab').addEventListener('click', () => switchTab('image'));
-            document.getElementById('textTab').addEventListener('click', () => switchTab('text'));
-
-            // 預覽圖片
-            document.getElementById('uploadImage').addEventListener('change', previewImage);
-
-            function switchTab(tab) {
-                document.getElementById('imageContent').classList.toggle('active', tab === 'image');
-                document.getElementById('textContent').classList.toggle('active', tab === 'text');
-                document.getElementById('imageTab').classList.toggle('active', tab === 'image');
-                document.getElementById('textTab').classList.toggle('active', tab === 'text');
-            }
-
-            function previewImage(event) {
-                const file = event.target.files[0];
-                const preview = document.getElementById('imagePreview');
-                if (file) {
-                    const reader = new FileReader();
-                    reader.onload = function (e) {
-                        preview.innerHTML = `<img src="${e.target.result}" alt="題目圖片" style="max-width: 100%; height: auto; border: 1px solid #ccc; border-radius: 8px;">`;
-                    };
-                    reader.readAsDataURL(file);
-                } else {
-                    preview.innerHTML = '';
-                }
-            }
-
-            // 分析輸入按鈕
-            document.getElementById('analyzeButton').addEventListener('click', analyzeInput);
-
-            async function analyzeInput() {
-                const imageInput = document.getElementById('uploadImage');
-                const textInput = document.getElementById('textInput');
-                const button = document.getElementById('analyzeButton');
-                const resultArea = document.getElementById('resultArea');
-
-                button.innerText = '分析中，請稍候...';
-                button.disabled = true;
-                resultArea.style.display = 'block';
-                resultArea.innerHTML = '<p class="loading">正在處理...</p>';
-
-                try {
-                    let payload = {};
-                    if (imageInput.files.length > 0 && document.getElementById('imageContent').classList.contains('active')) {
-                        const base64Image = await convertImageToBase64(imageInput.files[0]);
-                        payload = {
-                            contents: [
-                                {
-                                    parts: [
-                                        {
-                                            text: '請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5.學習反思：\n[進一步對上述解題步驟和答案作教師回饋幫助學習]\n請按上述格式分段回應，確保清晰、條理分明。'
-                                        },
-                                        {
-                                            inline_data: {
-                                                mime_type: 'image/jpeg',
-                                                data: base64Image
-                                            }
-                                        }
-                                    ]
-                                }
-                            ]
-                        };
-                    } else if (textInput.value.trim()) {
-                        payload = {
-                            contents: [
-                                {
-                                    parts: [
-                                        {
-                                            text: `請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5. 學習反思：\n[進一步對上述解題步驟和答案作教師回饋幫助學習]\n\n題目內容：${textInput.value.trim()}`
-                                        }
-                                    ]
-                                }
-                            ]
-                        };
-                    } else {
-                        alert('請提供圖片或文字內容！');
-                        button.innerText = '分析題目';
-                        button.disabled = false;
-                        return;
-                    }
-
-                    const response = await fetch(
-                        `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=YOUR_API_KEY`, // 請替換 YOUR_API_KEY 為您的實際 API 密鑰
-                        {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(payload),
-                        }
-                    );
-
-                    const responseData = await response.json();
-                    const answer = getNestedValue(responseData, 'text') || '無法獲取解答';
-
-                    // 格式化答案
-                    const sections = answer.split(/\d\.\s/).filter((section) => section.trim() !== '');
-                    const formattedAnswer = sections
-                        .map((section, index) => {
-                            return `<p>${section.trim().replace(/\n/g, '<br>')}</p>`;
-                        })
-                        .join('');
-
-                    resultArea.innerHTML = `<div class="question-card">${formattedAnswer}</div>`;
-                } catch (error) {
-                    resultArea.innerHTML = `<p class="loading">錯誤：${error.message}</p>`;
-                } finally {
-                    button.innerText = '分析題目';
-                    button.disabled = false;
-                }
-            }
-
-            // 遞歸獲取 JSON 嵌套值
-            function getNestedValue(data, key) {
-                if (typeof data === 'object') {
-                    for (const [k, v] of Object.entries(data)) {
-                        if (k === key) return v;
-                        const nestedValue = getNestedValue(v, key);
-                        if (nestedValue) return nestedValue;
-                    }
-                }
-                return null;
-            }
-
-            // 將圖片轉換為 Base64
-            async function convertImageToBase64(imageFile) {
-                return new Promise((resolve, reject) => {
-                    const reader = new FileReader();
-                    reader.onload = () => resolve(reader.result.split(',')[1]); // 返回Base64內容
-                    reader.onerror = (error) => reject(error);
-                    reader.readAsDataURL(imageFile);
-                });
-            }
-        })();
-
-        // ----------- 教我解題的 JavaScript -----------
-        (function() {
-            // 切換標籤
-            document.getElementById('imageTab').addEventListener('click', () => switchTab('image'));
-            document.getElementById('textTab').addEventListener('click', () => switchTab('text'));
-
-            // 預覽圖片
-            document.getElementById('uploadImage').addEventListener('change', previewImage);
-
-            function switchTab(tab) {
-                document.getElementById('imageContent').classList.toggle('active', tab === 'image');
-                document.getElementById('textContent').classList.toggle('active', tab === 'text');
-                document.getElementById('imageTab').classList.toggle('active', tab === 'image');
-                document.getElementById('textTab').classList.toggle('active', tab === 'text');
-            }
-
-            function previewImage(event) {
-                const file = event.target.files[0];
-                const preview = document.getElementById('imagePreview');
-                if (file) {
-                    const reader = new FileReader();
-                    reader.onload = function (e) {
-                        preview.innerHTML = `<img src="${e.target.result}" alt="題目圖片" style="max-width: 100%; height: auto; border: 1px solid #ccc; border-radius: 8px;">`;
-                    };
-                    reader.readAsDataURL(file);
-                } else {
-                    preview.innerHTML = '';
-                }
-            }
-
-            // 分析輸入按鈕
-            document.getElementById('analyzeButton').addEventListener('click', analyzeInput);
-
-            async function analyzeInput() {
-                const imageInput = document.getElementById('uploadImage');
-                const textInput = document.getElementById('textInput');
-                const button = document.getElementById('analyzeButton');
-                const resultArea = document.getElementById('resultArea');
-
-                button.innerText = '分析中，請稍候...';
-                button.disabled = true;
-                resultArea.style.display = 'block';
-                resultArea.innerHTML = '<p class="loading">正在處理...</p>';
-
-                try {
-                    let payload = {};
-                    if (imageInput.files.length > 0 && document.getElementById('imageContent').classList.contains('active')) {
-                        const base64Image = await convertImageToBase64(imageInput.files[0]);
-                        payload = {
-                            contents: [
-                                {
-                                    parts: [
-                                        {
-                                            text: '請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5.學習反思：\n[進一步對上述解題步驟和答案作教師回饋幫助學習]\n請按上述格式分段回應，確保清晰、條理分明。'
-                                        },
-                                        {
-                                            inline_data: {
-                                                mime_type: 'image/jpeg',
-                                                data: base64Image
-                                            }
-                                        }
-                                    ]
-                                }
-                            ]
-                        };
-                    } else if (textInput.value.trim()) {
-                        payload = {
-                            contents: [
-                                {
-                                    parts: [
-                                        {
-                                            text: `請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5. 學習反思：\n[進一步對上述解題步驟和答案作教師回饋幫助學習]\n\n題目內容：${textInput.value.trim()}`
-                                        }
-                                    ]
-                                }
-                            ]
-                        };
-                    } else {
-                        alert('請提供圖片或文字內容！');
-                        button.innerText = '分析題目';
-                        button.disabled = false;
-                        return;
-                    }
-
-                    const response = await fetch(
-                        `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=YOUR_API_KEY`, // 請替換 YOUR_API_KEY 為您的實際 API 密鑰
-                        {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(payload),
-                        }
-                    );
-
-                    const responseData = await response.json();
-                    const answer = getNestedValue(responseData, 'text') || '無法獲取解答';
-
-                    // 格式化答案
-                    const sections = answer.split(/\d\.\s/).filter((section) => section.trim() !== '');
-                    const formattedAnswer = sections
-                        .map((section, index) => {
-                            return `<p>${section.trim().replace(/\n/g, '<br>')}</p>`;
-                        })
-                        .join('');
-
-                    resultArea.innerHTML = `<div class="question-card">${formattedAnswer}</div>`;
-                } catch (error) {
-                    resultArea.innerHTML = `<p class="loading">錯誤：${error.message}</p>`;
-                } finally {
-                    button.innerText = '分析題目';
-                    button.disabled = false;
-                }
-            }
-
-            // 遞歸獲取 JSON 嵌套值
-            function getNestedValue(data, key) {
-                if (typeof data === 'object') {
-                    for (const [k, v] of Object.entries(data)) {
-                        if (k === key) return v;
-                        const nestedValue = getNestedValue(v, key);
-                        if (nestedValue) return nestedValue;
-                    }
-                }
-                return null;
-            }
-
-            // 將圖片轉換為 Base64
-            async function convertImageToBase64(imageFile) {
-                return new Promise((resolve, reject) => {
-                    const reader = new FileReader();
-                    reader.onload = () => resolve(reader.result.split(',')[1]); // 返回Base64內容
-                    reader.onerror = (error) => reject(error);
-                    reader.readAsDataURL(imageFile);
-                });
             }
         })();
 
