--- a/webBot.html
+++ b/webBot.html
@@ -993,7 +993,7 @@
                 document.getElementById('quizForm').style.display = 'none';
 
                 try {
-                    const response = await fetch(`https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=YOUR_API_KEY`, { // 請替換 YOUR_API_KEY 為您的實際 API 密鑰
+                    const response = await fetch(`https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ`, { // 請替換 YOUR_API_KEY 為您的實際 API 密鑰
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
@@ -1270,7 +1270,7 @@
                     }
 
                     const response = await fetch(
-                        `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=YOUR_API_KEY`, // 請替換 YOUR_API_KEY 為您的實際 API 密鑰
+                        `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ`, // 請替換 YOUR_API_KEY 為您的實際 API 密鑰
                         {
                             method: 'POST',
                             headers: {
