--- a/webBot.html
+++ b/webBot.html
@@ -16,10 +16,25 @@
             background-color: #f7f6f2;
         }
 
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+            display: none;
+        }
+
+        .overlay.show {
+            display: block;
+        }
+
         .container {
             flex: 1;
             display: flex;
-            overflow: hidden;
+            /* overflow: hidden; */ /* 移除此行以允許內容滾動 */
         }
 
         .sidebar {
@@ -36,7 +51,7 @@
         /* 移動端初始隱藏側邊欄 */
         @media (max-width: 768px) {
             .sidebar {
-                position: absolute;
+                position: fixed; /* 改為 fixed */
                 height: 100%;
                 top: 0;
                 left: 0;
@@ -53,35 +68,27 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-                z-index: 100;
+                z-index: 1002; /* 確保在遮罩層之上 */
                 padding: 10px;
                 background-color: white;
                 border-top: 1px solid #ddd;
                 box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
             }
 
-            /* 調整聊天窗口的底部間距，以避免被固定的輸入區域覆蓋 */
-            .chat-window {
-                padding-bottom: 70px; /* 根據輸入區域的高度調整 */
+            /* 調整聊天窗口和外部內容的滾動 */
+            .chat-window, .external-content {
+                flex: 1;
+                overflow-y: auto;
+                padding-bottom: 70px; /* 避免被輸入區域覆蓋 */
             }
 
-            /* 確保主內容區域的高度不超過視窗 */
+            /* 確保主內容區域可以滾動 */
             .main-content {
-                height: 100vh;
+                margin-top: 50px; /* 頭部高度 */
                 display: flex;
                 flex-direction: column;
-            }
-
-            /* 確保 AI素養題產生器和教我解題區域不被覆蓋 */
-            .external-content {
-                padding-bottom: 70px; /* 同樣避免被固定的輸入區域覆蓋 */
-            }
-
-            /* AI素養題產生器和教我解題區域在手機上的底部間距調整 */
-            .ai-generator-container,
-            .solve-problem-container,
-            .physics-lecture-container { /* 新增 */
-                padding-bottom: 20px; /* 確保內容不被輸入區域遮蓋 */
+                overflow-y: auto; /* 允許滾動 */
+                padding-bottom: 70px; /* 避免被輸入區域覆蓋 */
             }
         }
 
@@ -133,7 +140,7 @@
         .sidebar-header {
             padding: 20px;
             text-align: center;
-            font-size: 20px;
+            font-size: 18px; /* 調整字體大小 */
             font-weight: bold;
             background-color: #f0f0f0;
         }
@@ -144,11 +151,12 @@
         }
 
         .menu-item {
-            padding: 10px;
+            padding: 15px; /* 增加內邊距 */
             cursor: pointer;
             border-radius: 5px;
             transition: background-color 0.2s ease, color 0.2s ease;
             color: #333;
+            font-size: 16px; /* 增加字體大小 */
         }
 
         .menu-item:hover {
@@ -173,6 +181,7 @@
             align-items: center;
             justify-content: space-between;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 增加陰影效果 */
+            font-size: 20px; /* 確保標題字體大小 */
         }
 
         .main-content {
@@ -684,6 +693,9 @@
     </style>
 </head>
 <body>
+    <!-- 遮罩層 -->
+    <div class="overlay" id="overlay"></div>
+
     <div class="container">
         <!-- 側邊欄 -->
         <div class="sidebar" id="sidebar">
@@ -814,6 +826,7 @@
             const imagePreviewContainer = document.getElementById('image-preview-container');
             const sendButton = document.getElementById('send-button');
             const userInput = document.getElementById('user-input');
+            const overlay = document.getElementById('overlay'); // 新增
 
             let selectedImage = null;
 
@@ -824,8 +837,12 @@
                 solveProblemContent.style.display = 'none';
                 physicsLectureContent.style.display = 'none'; // 隱藏其他內容
                 returnChat.classList.remove('hidden');
+                openAIGenerator.classList.add('hidden');
+                openSolveProblem.classList.add('hidden');
+                openPhysicsLecture.classList.add('hidden'); // 隱藏其他選單項目
                 document.querySelector('.input-area').style.display = 'none'; // 隱藏輸入框
                 sidebar.classList.remove('show'); 
+                overlay.classList.remove('show'); // 隱藏遮罩層
             });
 
             // 切換到 教我解題
@@ -835,8 +852,12 @@
                 solveProblemContent.style.display = 'block';
                 physicsLectureContent.style.display = 'none'; // 隱藏其他內容
                 returnChat.classList.remove('hidden');
+                openAIGenerator.classList.add('hidden');
+                openSolveProblem.classList.add('hidden');
+                openPhysicsLecture.classList.add('hidden'); // 隱藏其他選單項目
                 document.querySelector('.input-area').style.display = 'none'; // 隱藏輸入框
                 sidebar.classList.remove('show');
+                overlay.classList.remove('show'); // 隱藏遮罩層
             });
 
             // 切換到 物理講義
@@ -846,8 +867,12 @@
                 solveProblemContent.style.display = 'none';
                 physicsLectureContent.style.display = 'block';
                 returnChat.classList.remove('hidden');
+                openAIGenerator.classList.add('hidden');
+                openSolveProblem.classList.add('hidden');
+                openPhysicsLecture.classList.add('hidden'); // 隱藏其他選單項目
                 document.querySelector('.input-area').style.display = 'none'; // 隱藏輸入框
                 sidebar.classList.remove('show');
+                overlay.classList.remove('show'); // 隱藏遮罩層
             });
 
             // 返回聊天
@@ -862,18 +887,27 @@
                 openPhysicsLecture.classList.remove('hidden'); // 確保新選單項目顯示
                 document.querySelector('.input-area').style.display = 'flex'; // 顯示輸入框
                 sidebar.classList.remove('show'); 
+                overlay.classList.remove('show'); // 隱藏遮罩層
             });
 
             // 漢堡菜單切換
             menuToggle.addEventListener('click', (e) => {
                 e.stopPropagation(); // 防止事件冒泡
                 sidebar.classList.toggle('show');
+                overlay.classList.toggle('show'); // 顯示/隱藏遮罩層
+            });
+
+            // 點擊遮罩層時，關閉側邊欄
+            overlay.addEventListener('click', () => {
+                sidebar.classList.remove('show');
+                overlay.classList.remove('show');
             });
 
             // 點擊頁面其他部分時，關閉側邊欄
             document.addEventListener('click', (event) => {
                 if (!sidebar.contains(event.target) && !menuToggle.contains(event.target)) {
                     sidebar.classList.remove('show');
+                    overlay.classList.remove('show'); // 隱藏遮罩層
                 }
             });
 
@@ -920,7 +954,8 @@
                 userInput.value = '';
 
                 setTimeout(() => {
-                    appendMessage('機器人回應：' + message, 'bot-message');
+                    const botReply = message ? `機器人回應：${message}` : '機器人回應：收到圖片';
+                    appendMessage(botReply, 'bot-message');
                 }, 500);
             });
 
@@ -939,7 +974,7 @@
                 }
 
                 chatWindow.appendChild(message);
-                chatWindow.scrollTop = chatWindow.scrollHeight;
+                chatWindow.scrollTop = chatWindow.scrollHeight; // 滾動至最底部
             }
 
             // 根據當前時間獲取問候語
@@ -957,7 +992,7 @@
 
             // 頁面加載時向用戶打招呼
             const greeting = getGreeting();
-            appendMessage(`${greeting}今天想要討論什麼呢？`, 'bot-message');
+            appendMessage(`${greeting} 今天想要討論什麼呢？`, 'bot-message');
 
             // 初始化 AI素養題產生器選項
             
@@ -1182,144 +1217,6 @@
                     option.text = `${i}題`;
                     questionCountSelect.appendChild(option);
                 }
-            }
-        })();
-
-        // ----------- 教我解題的 JavaScript -----------
-        (function() {
-            // 切換標籤
-            document.getElementById('imageTab').addEventListener('click', () => switchTab('image'));
-            document.getElementById('textTab').addEventListener('click', () => switchTab('text'));
-
-            // 預覽圖片
-            document.getElementById('uploadImage').addEventListener('change', previewImage);
-
-            function switchTab(tab) {
-                document.getElementById('imageContent').classList.toggle('active', tab === 'image');
-                document.getElementById('textContent').classList.toggle('active', tab === 'text');
-                document.getElementById('imageTab').classList.toggle('active', tab === 'image');
-                document.getElementById('textTab').classList.toggle('active', tab === 'text');
-            }
-
-            function previewImage(event) {
-                const file = event.target.files[0];
-                const preview = document.getElementById('imagePreview');
-                if (file) {
-                    const reader = new FileReader();
-                    reader.onload = function (e) {
-                        preview.innerHTML = `<img src="${e.target.result}" alt="題目圖片" style="max-width: 100%; height: auto; border: 1px solid #ccc; border-radius: 8px;">`;
-                    };
-                    reader.readAsDataURL(file);
-                } else {
-                    preview.innerHTML = '';
-                }
-            }
-
-            // 分析輸入按鈕
-            document.getElementById('analyzeButton').addEventListener('click', analyzeInput);
-
-            async function analyzeInput() {
-                const imageInput = document.getElementById('uploadImage');
-                const textInput = document.getElementById('textInput');
-                const button = document.getElementById('analyzeButton');
-                const resultArea = document.getElementById('resultArea');
-
-                button.innerText = '分析中，請稍候...';
-                button.disabled = true;
-                resultArea.style.display = 'block';
-                resultArea.innerHTML = '<p class="loading">正在處理...</p>';
-
-                try {
-                    let payload = {};
-                    if (imageInput.files.length > 0 && document.getElementById('imageContent').classList.contains('active')) {
-                        const base64Image = await convertImageToBase64(imageInput.files[0]);
-                        payload = {
-                            contents: [
-                                {
-                                    parts: [
-                                        {
-                                            text: '請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5.學習反思：\n[進一步對上述解題步驟和答案作教師回饋幫助學習]\n請按上述格式分段回應，確保清晰、條理分明。'
-                                        },
-                                        {
-                                            inline_data: {
-                                                mime_type: 'image/jpeg',
-                                                data: base64Image
-                                            }
-                                        }
-                                    ]
-                                }
-                            ]
-                        };
-                    } else if (textInput.value.trim()) {
-                        payload = {
-                            contents: [
-                                {
-                                    parts: [
-                                        {
-                                            text: `請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5. 學習反思：\n[進一步對上述解題步驟和答案作教師回饋幫助學習]\n\n題目內容：${textInput.value.trim()}`
-                                        }
-                                    ]
-                                }
-                            ]
-                        };
-                    } else {
-                        alert('請提供圖片或文字內容！');
-                        button.innerText = '分析題目';
-                        button.disabled = false;
-                        return;
-                    }
-
-                    const response = await fetch(
-                        `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ`, // 請替換 YOUR_API_KEY 為您的實際 API 密鑰
-                        {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(payload),
-                        }
-                    );
-
-                    const responseData = await response.json();
-                    const answer = getNestedValue(responseData, 'text') || '無法獲取解答';
-
-                    // 格式化答案
-                    const sections = answer.split(/\d\.\s/).filter((section) => section.trim() !== '');
-                    const formattedAnswer = sections
-                        .map((section, index) => {
-                            return `<p>${section.trim().replace(/\n/g, '<br>')}</p>`;
-                        })
-                        .join('');
-
-                    resultArea.innerHTML = `<div class="question-card">${formattedAnswer}</div>`;
-                } catch (error) {
-                    resultArea.innerHTML = `<p class="loading">錯誤：${error.message}</p>`;
-                } finally {
-                    button.innerText = '分析題目';
-                    button.disabled = false;
-                }
-            }
-
-            // 遞歸獲取 JSON 嵌套值
-            function getNestedValue(data, key) {
-                if (typeof data === 'object') {
-                    for (const [k, v] of Object.entries(data)) {
-                        if (k === key) return v;
-                        const nestedValue = getNestedValue(v, key);
-                        if (nestedValue) return nestedValue;
-                    }
-                }
-                return null;
-            }
-
-            // 將圖片轉換為 Base64
-            async function convertImageToBase64(imageFile) {
-                return new Promise((resolve, reject) => {
-                    const reader = new FileReader();
-                    reader.onload = () => resolve(reader.result.split(',')[1]); // 返回Base64內容
-                    reader.onerror = (error) => reject(error);
-                    reader.readAsDataURL(imageFile);
-                });
             }
         })();
 
