--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">探究與實作</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
-         <li><a href="https://forms.gle/UtQjdMbaUVurmqzu6">問卷調查</a></li>
+         <li><a href="https://forms.gle/kRiPdfccSw6uHp1x7">問卷調查</a></li>
         
        
       </ul>
