--- a/webAIBot.html
+++ b/webAIBot.html
@@ -879,7 +879,7 @@
     </div>
     <script>
         let thread = []; // 儲存聊天記錄
-        const geminiurl='https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ';
+        const geminiurl='https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash-latest:generateContent?key=AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ';
 
         document.addEventListener('DOMContentLoaded', () => {
             const sidebar = document.getElementById('sidebar');
