--- a/physics.html
+++ b/physics.html
@@ -36,7 +36,7 @@
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
                   <a href="Competency.html">高中物理素養題</a>
-                  <a href="AItext.html">AI素養題產生器</a>
+                  <a href="AItest.html">AI素養題產生器</a>
                   <a href="https://script.google.com/a/macros/gish.tyc.edu.tw/s/AKfycbxi9HbYT35mZuu001wZV5RWvCmg3CCuKiMji2ByPAGsijireudjsamT7NJnMbJOe6x9/exec">教師小考出題</a>
                   <a href="https://script.google.com/macros/s/AKfycbwpg9WTq_V3R17w33JXzwPBdujZnoPJ4oJ1PTZnaMfvJEImyJVBUKfB19iJwTqEClM/exec">線上課堂小考</a>
                
