--- a/webAIBot.html
+++ b/webAIBot.html
@@ -944,7 +944,7 @@
     </div>
     <script>
         let thread = []; // 儲存聊天記錄
-        const geminiurl='https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash-exp:generateContent?key=AIzaSyA-pSNcki6Gn9p0q0BhEcOwyG6LZWAOlxE';
+        const geminiurl='https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA-pSNcki6Gn9p0q0BhEcOwyG6LZWAOlxE';
 
         let translationMode = false; // 新增翻譯模式變數
 
