--- a/webBot.html
+++ b/webBot.html
@@ -879,7 +879,7 @@
     </div>
     <script>
         let thread = []; // 儲存聊天記錄
-        const geminiurl='https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA-pSNcki6Gn9p0q0BhEcOwyG6LZWAOlxE';
+        const geminiurl='https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash-exp:generateContent?key=AIzaSyA-pSNcki6Gn9p0q0BhEcOwyG6LZWAOlxE';
 
         document.addEventListener('DOMContentLoaded', () => {
             const sidebar = document.getElementById('sidebar');
