--- a/physics.html
+++ b/physics.html
@@ -37,7 +37,7 @@
                   <a href="phyhistorytest.html">物理史小測驗</a>
                   <a href="Competency.html">高中物理素養題</a>
                   <a href="AItest.html">AI素養題產生器</a>
-                  <a href="https://script.google.com/a/macros/gish.tyc.edu.tw/s/AKfycbxi9HbYT35mZuu001wZV5RWvCmg3CCuKiMji2ByPAGsijireudjsamT7NJnMbJOe6x9/exec">教師小考出題</a>
+                  <a href="https://script.google.com/macros/s/AKfycbwVBfiZ-ulw-sc9frfi3Jf9JvOD1s1tkTwPUya2VEV4YrMEg1OmjM5n3rjCk49IrSpk/exec">教師小考出題</a>
                   <a href="https://script.google.com/macros/s/AKfycbwpg9WTq_V3R17w33JXzwPBdujZnoPJ4oJ1PTZnaMfvJEImyJVBUKfB19iJwTqEClM/exec">線上課堂小考</a>
                
               </div>
