--- a/AItest.html
+++ b/AItest.html
@@ -261,7 +261,7 @@
             document.getElementById('quizForm').style.display = 'none';
 
             try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA-pSNcki6Gn9p0q0BhEcOwyG6LZWAOlxE`, {
+                const response = await fetch(`'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash-exp:generateContent?key=AIzaSyCgQvYPDevWVV0fFMJqRBVAaF3zWWWvCaE'`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
