--- a/exp.html
+++ b/exp.html
@@ -154,6 +154,10 @@
     src="https://www.canva.com/design/DAGSJvunYXI/7K0SwF-vAMwEMpok4v5tfg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
+<p>報告順序:<a href="https://tw.piliapp.com/random/wheel/" target="_blank">連結</a></p>
+<p><a href="https://forms.gle/5Nds1yvefuWN63Fr6">報告上傳</a></p>
+<p>201班報告:<a href="https://docs.google.com/spreadsheets/d/1XcxO1ijHuZvJ_nSmMRv_UhIY3EryJkhr6gs9LU3yvx0/edit?usp=sharing">連結</a></p>
+<br><br>
 
 <br><br> 
   
