--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                   <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet713計畫</a>
                   <a href="https://guidephy.github.io/pond/">埤塘水資源</a>
+                  <a href="https://guihttps://guidephy.github.io/internationalFriend/">國際好友遊觀音</a>
                   <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
                   <a href="https://guidephy.notion.site/Learn-to-Create-An-RPG-Game-In-Unity-Tutorial-Udemy-e1e79f20d692448b86fd4fc740aac94b?pvs=4">unity2D學習筆記</a>
